<resources>
    <string name="app_name">Nixor Student Application</string>
    //welcome_screen
    //Java
    <string name="notsupported">Your device is not supported. Please try updating Google Play Services</string>

    //Authentication
    //XML
    <string name="text_phone_entry">Enter phone number</string>
    <string name="code_timer">Time: </string>
    <string name="send_code">Verify</string>
    <string name="code_display">Enter code</string>
    <string name="code_entry">0000</string>
    <string name="verify_code">Next</string>
    <string name="phone_entry">+92348484334</string>
    <string name="auth_heading">Verify phone number</string>
    //Java
    <string name="unabletosendcode">There seems to be a problem sending the code</string>
    <string name="phoneAuthSendCodeLoadingText">Sending code</string>
    <string name="phoneAuthVerifyCodeLoadingText">Verifying code</string>
    <string name="phoneAuthSuccess">Login Successful</string>


    //Portal Login
    //XML
    <string name="email_textView">Enter your Nixor Email</string>
    <string name="email_editText">first-name.last-name</string>
    <string name="password_textView">Enter your portal password</string>
    <string name="login_button">Next</string>
    <string name="domain_textView">&#064;nixorcollege.edu.pk</string>
    //Java
    <string name="base_url">https://nsp.braincrop.net</string>
    <string name="login_url">https://nsp.braincrop.net/Account/Login</string>
    <string name="logout_url">https://nsp.braincrop.net/Account/LogOff</string>
    <string name="invalidCreds">The username or password for your portal account is incorrect</string>
    <string name="portalLoginDown">The portal site is down. Please try again later</string>
    <string name="unknownPortalLoginError">An unknown error occured.</string>
    <string name="portalLoginLoadingText">Signing in.</string>


    //common_utils
    //Java
    <string name="SharedPref">NixorSharedPref</string>
    <string name="notActivatedAlertTitle">Account not activated</string>
    <string name="notActivatedAlertMessage">It seems like your account is not activated. Please contact Nixor Administration.
    Thank you</string>


    //AccountType
    //XML
    <string name="selecttype_textView">Select account type</string>
    <string name="parentmode_button">Parent Mode</string>
    <string name="studentmode_button">Student Mode</string>

    //home_screen
    //XML
    <string name="nixorpoints_textView">Nixor points: </string>


    //Past_papers
    //XML
    <string name="paper_selectedMultiview">Paper selected for multiview. Press back to remove</string>
    <string name="yearTitle_textView">Year:</string>
    <string name="reset_button">Reset</string>
    <string name="variantTitle_textView">Variant:</string>
    <string name="typeTitle_textView">Type:</string>
    <string name="monthTitle_textView">Month:</string>
    <string name="byYear">Year:</string>
    <string name="byVariant">Variant:</string>
    <string name="byMonth">Month:</string>
    <string name="byType">Type:</string>
    <string name="apply_button">Apply</string>


    //BookMyTa
    //XMl
    <string name="submit_Button_textView">Book TA</string>
    <string name="Default_Time_Ta">Unavailable</string>
    <string name="ta_Name">TA Name</string>


    <string name="filter_heading">Filter papers</string>
    <string name="notrated_textView">Not rated</string>
    //Java
    <string name="pastpaper_loadingtext">Loading paper please wait</string>
    <string name="ratingSuccessMessage">Rating given. Thank you</string>
    <string-array name="listofmonths">
        <item>All</item>
        <item>May/June</item>
        <item>October/November</item>
        <item>February/March</item>
    </string-array>
    <string-array name="listofyears">
        <item>All</item>
        <item>From: To: </item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
    </string-array>
    <string-array name="listtype">
        <item>All</item>
        <item>Question Paper</item>
        <item>Marking Scheme</item>
        <item>Examiner Report</item>
        <item>Grade Threshold</item>
        <item>Specimen Paper</item>
    </string-array>
    <string name="title_activity_scrolling_ta">ScrollingTa</string>
    <string name="large_text">











        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_ta_tab">TaTab</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="node_subjects">Past Papers/names/</string>
    <string name="node_soc_all_subjects">SharksOnCloud/AllSubjects/</string>
    <string name="mainUserNode">users/</string>


    <string name="node_papers">Past Papers/Subjects/</string>
    <string name="paperhint">"Question paper 2017..."</string>
    <string name="subject_hint">"Enter a subject name</string>


    //PdfLoad
    //XML
    <string name="done_button">Done</string>
    <string name="ratingTitle">Thank you</string>
    <string name="ratingMessage">Rate paper difficulty</string>
    <string name="search_hint">Subject name</string>
    <string name="rating_textview">Difficulty</string>


    //GeneralLayout
    //Java
    <string name="Bookmyta">BookMyTa</string>
    <string name="Home">Home</string>
    <string name="Pastpapers">Past papers</string>
    <string name="Soc">Sharks on Cloud</string>
    <string name="Portal">Portal</string>
    <string name="Carpool">Nixor Carpool</string>


    //ImageViewer
    //Java
    <string name="lastImageSelected">No more images</string>


    //api key
    <string name="google_maps_key">AIzaSyB3vVOtFvwUR47jxjDws1_BEUQxuH7EDo8</string>
</resources>
