<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Autentication.nsp_web.portal_login">

    <TextView
        android:id="@+id/email_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/email_textView"
        android:textAlignment="center"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/email_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/email_textView"
        android:ems="10"
        android:hint="@string/email_editText"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/domain_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/email_editText"
        android:layout_below="@+id/email_textView"
        android:layout_toEndOf="@+id/email_editText"
        android:text="@string/domain_textView" />

    <EditText
        android:id="@+id/password_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_textView"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/password_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/email_editText"
        android:text="@string/password_textView"
        android:textAlignment="center"
        android:textStyle="bold" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_editText"
        android:layout_centerHorizontal="true"
        android:text="@string/login_button" />
</RelativeLayout>