<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".Autentication.login_screen">

    <EditText
        android:id="@+id/phone_entry"

        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="217dp"
        android:layout_marginLeft="40sp"

        android:layout_marginRight="40sp"
        android:layout_marginTop="10sp"
        android:background="#f1f5f9"
        android:drawablePadding="5dp"
        android:ems="10"
        android:fontFamily="@font/assistant_extralight"
        android:gravity="left"
        android:hint="@string/text_phone_entry"
        android:inputType="phone"
        android:padding="5dp"
        android:paddingBottom="8sp"
        android:paddingTop="8sp"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/code_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phone_entry"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/code_timer"
        android:visibility="gone" />

    <Button
        android:id="@+id/send_code"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="109dp"
        android:background="#f1f5f9"
        android:enabled="false"
        android:fontFamily="@font/assistant_extralight"
        android:text="@string/send_code"
        android:textColor="#000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/code_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/send_code"
        android:layout_centerHorizontal="true"
        android:text="@string/code_display"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/code_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/code_display"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/code_entry"
        android:inputType="phone"
        android:textAlignment="center"
        android:visibility="invisible" />

    <Button
        android:id="@+id/verify_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/code_entry"
        android:layout_centerHorizontal="true"
        android:text="@string/verify_code"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="#273043"
        android:padding="40dp"
        android:src="@drawable/shark_image" />

</RelativeLayout>