<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Autentication.User.AccountType">

    <Button
        android:id="@+id/parentmode_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/studentmode_button"
        android:layout_margin="10dp"
        android:text="@string/parentmode_button"
        tools:layout_editor_absoluteX="112dp"
        tools:layout_editor_absoluteY="75dp" />

    <TextView
        android:id="@+id/selecttype_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/selecttype_textView" />

    <Button
        android:id="@+id/studentmode_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/selecttype_textView"
        android:layout_margin="10dp"
        android:text="@string/studentmode_button" />
</RelativeLayout>