<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/paperlayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:background="#fff">

    <RatingBar
        android:id="@+id/ratingBar"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_weight="1"
        android:numStars="5"
        android:rating="5"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/yearTitle_textView"
                style="@style/headings"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_weight="1"
                android:text="@string/yearTitle_textView"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/year_textView"
                style="@style/sub_headings"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/yearTitle_textView"
                android:layout_weight="1"
                android:text="2016"
                android:textAlignment="viewStart"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/monthTitle_textView"
                style="@style/headings"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/year_textView"
                android:layout_weight="1"
                android:text="@string/monthTitle_textView"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/month_textView"
                style="@style/sub_headings"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/monthTitle_textView"
                android:layout_weight="1"
                android:text="June"
                android:textAlignment="viewStart"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/typeTitle_textView"
                style="@style/headings"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/variant_textView"
                android:layout_weight="1"
                android:text="@string/typeTitle_textView"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/type_textView"
                style="@style/sub_headings"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/typeTitle_textView"
                android:layout_weight="1"
                android:text="Question paper"
                android:textAlignment="viewStart"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/variantTitle_textView"
                style="@style/headings"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_weight="1"
                android:text="@string/variantTitle_textView"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/variant_textView"
                style="@style/sub_headings"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/variantTitle_textView"
                android:layout_weight="1"
                android:text="22"
                android:textAlignment="viewStart"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>